# quicktasksv2

./: .env  .gitignore  Cargo.toml  Dockerfile.runtime  README.md  TXT.txt  data.json  install.ps1  install.sh  lisence
.github/workflows/: release.yml
packaging/: efficeintnlp.service
src/: downloader.rs  error.rs  executor.rs  lib.rs  main.rs  models.rs  params.rs  routes.rs  routing.rs  state.rs  ui_logs.rs
static/: index.html
