[package]
name = "quicktasks"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "quicktasks"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
gte = { package = "gte-rs", git = "https://github.com/fbilhaut/gte-rs", branch = "main" }
ndarray = "0.15.6"
gliner = { package = "gline-rs", version = "1.0.1" } 
composable = "0.9.0"
orp = { git = "https://github.com/fbilhaut/orp", branch = "main" }
tokenizers = "0.19.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
once_cell = "1.19.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
futures-util = "0.3"

dotenvy = "0.15"
shlex = "1.3"

[features]
default = []
fire-and-forget = []
ui = ["tower-http/fs"]

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
unix-archive = ".tar.gz"
windows-archive = ".zip"
pr-run-mode = "plan"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
